# clip-angelo

./: .directory  Changelog  Makefile.in  Readme_src  c  clean.sh  configure  cvs_commit  cvs_init  cvs_init-dev  cvs_ucommit  cvs_update  depend.sh  distclean.sh  flawfinder.sh  force.clean.sh  home.sh  indent.sh  local.sh  make  menu.sh  mkall  mkdeb  mkdoc  mklocal  mktgz  opt.sh  release.sequence  release.version  sys.sh  user  usr.local.sh  vTempVersion.txt
clip/libcliptask/: Makefile.cl  Makefile.empty  Makefile.in  Makefile.pth  arch.sh  ci_cl_cfg.h  ci_task.h  ci_task2.h  cl_conf  cl_task.c  cl_tst.c  configure.in  libcver.sh  osname.sh  pth_task.c  pth_tst  pth_tst.c  task.h  task2.h  task_tst.c
cliplibs/: Makefile  Makefile.in  configure  configure.in  mktgz  spec.in
cliplibs/clip-bzip2/: Makefile  Makefile.in  bzip2.c  configure.in
cliplibs/clip-codb/: Makefile  Makefile.in  codb.prg  codb_cache.prg  codb_cobra.prg  codb_dep.prg  codb_dict.prg  codb_funcs.prg  codb_list.prg  codb_query.prg  codb_sql.prg  codb_uni.prg  count_dbf.prg  dep_all.prg  dep_cobra.prg  dep_dbf.prg  dict_all.prg  dict_cobra.prg  dict_dbf.prg  dict_sql.prg  ext_dbf.prg  list_id.prg
cliplibs/clip-com/: Makefile  Makefile.in  com.c
cliplibs/clip-crypto/: Makefile  Makefile.in  configure.in  crypto.c
cliplibs/clip-ctcom/: Makefile  Makefile.in
cliplibs/clip-cti/: Makefile  Makefile.in  ctiapp.prg  ctibin.prg  ctibox.prg  ctibrowsecombo.prg  cticalendar.prg  cticheckbox.prg  cticontainer.prg  cticontrol.prg  ctientry.prg  ctievents.prg  ctifiled.prg  ctifuncs.prg  ctihbox.prg  ctilabel.prg  ctilayout.prg  ctilist.prg  ctimain.prg  ctimenu.prg  ctimenubar.prg  ctimenuitem.prg  ctimenushell.prg  ctiobject.prg  ctiobjectlist.prg  ctioptionmenu.prg  ctipushbutton.prg  ctiradiobutton.prg  ctiradiogroup.prg  ctisignal.prg  ctistatusbar.prg  ctitbrowse.prg  ctivbox.prg  ctiwidget.prg  ctiwindow.prg  ctizorder.prg
cliplibs/clip-dbtcp/: Makefile.in  configure.in  dbtcp.prg  dbtcp_clip.c
cliplibs/clip-fcgi/: Makefile  Makefile.in  configure.in  fcgi.c
cliplibs/clip-fw/: Makefile.in  c_funcs.c  configure.in  fp.prg  fw_bar.prg  fw_brush.prg  fw_btnbmp.prg  fw_button.prg  fw_combobox.prg  fw_common.prg  fw_control.prg  fw_dialog.prg  fw_font.prg  fw_get.prg  fw_icon.prg  fw_listbox.prg  fw_mdichild.prg  fw_mdiclien.prg  fw_mdiframe.prg  fw_menu.prg  fw_menuitem.prg  fw_menusys.prg  fw_meter.prg  fw_msg.prg  fw_msgbar.prg  fw_msgitem.prg  fw_say.prg  fw_scrllbar.prg  fw_syscti.prg  fw_sysgtk.prg  fw_tabs.prg  fw_timer.prg  fw_wbrowse.prg  fw_window.prg  t.prg
cliplibs/clip-gd/: Makefile  Makefile.in  _gd.c  bggraph.prg  bgtools.prg  circle.prg  configure.in  gd_obj.prg  hist.prg  hist3d.prg  histcumul.prg  histnorm.prg  line.prg  linecumul.prg  linenorm.prg  makegd.sh  ring.prg
cliplibs/clip-glade2/: Makefile  Makefile.in  clip_glade.c  configure  configure.in
cliplibs/clip-gtk/: Makefile  Makefile.in  accelgroup.c  adjustment.c  alignment.c  bmpxpm.c  box.c  button.c  buttonbox.c  calendar.c  checkbutton.c  checkmenuitem.c  clist.c  colorsel.c  combo.c  common.c  configure.in  container.c  ctree.c  curve.c  dialog.c  drawingarea.c  editable.c  entry.c  extext.c  filesel.c  fixed.c  fontsel.c  frame.c  gdk.c  gdkcolor.c  gdkdraw.c  gdkfont.c  gdkgc.c  gdkinput.c  gdkpixbuf.c  gdkregion.c  gdkrgb.c  gdkwindow.c  general.c  (+45 more)
cliplibs/clip-gtk2/: Makefile.in  aboutdialog.c  accelgroup.c  action.c  actiongroup.c  adjustment.c  alignment.c  bin.c  bmpxpm.c  box.c  button.c  buttonbox.c  calendar.c  celllayout.c  cellrenderer.c  cellview.c  checkbutton.c  checkmenuitem.c  clipboard.c  clist.c  colorbutton.c  colorsel.c  combo.c  combobox.c  common.c  configure.in  container.c  ctree.c  curve.c  dialog.c  draganddrop.c  drawingarea.c  editable.c  entry.c  entrycompletion.c  extext.c  filechooser.c  filechooserbutton.c  filefilter.c  filesel.c  (+93 more)
cliplibs/clip-gtkextra/: Makefile  Makefile.in  bordercombo.c  clip-gtkextracfg.h  colorcombo.c  combobox.c  configure  configure.in  fontcombo.c  hashcode.h  itementry.c  sheet.c  togglecombo.c
cliplibs/clip-gzip/: Makefile  Makefile.in  configure.in  gzip.c
cliplibs/clip-interbase/: Makefile  Makefile.in  configure.in  ib.prg  ib_clip.c
cliplibs/clip-mysql/: Makefile  Makefile.in  configure.in  ms.prg  ms_clip.c
cliplibs/clip-nanfor/: Makefile.in  ach2tb.prg  amedian.prg  aredit.prg  calendar.prg  clrsel.prg  configure.in  diskfunc.prg  dispmsg.prg  dosver.prg  floptst.prg  ftext.prg  isshare.prg  menuto.prg  mouse1.prg  nwlstat.prg  nwsem.prg  nwuid.prg  page.prg  pegs.prg  pickday.prg  popadder.prg  pvid.prg  restsets.prg  savesets.prg  scancode.prg  setdate.prg  settime.prg  sysmem.prg  tbwhile.prg  tempfile.prg  vertmenu.prg  vidcur.prg  vidmode.prg
cliplibs/clip-netto/: Makefile.in  fnbin2i.prg  fnerr.prg  fnhex.prg  fnpeek.prg  fnpfeval.prg  ipxinit.prg  is3x.prg  isnet.prg  namel.prg  nonull.prg  nwdate.prg  request.prg  ssfp.prg
cliplibs/clip-odbc/: Makefile  Makefile.in  configure  configure.in  odbc.prg  odbc_clip.c
cliplibs/clip-oracle/: Makefile  Makefile.in  configure.in  or.prg  or_clip.c
cliplibs/clip-postgres/: Makefile.in  configure  configure.in  pg.prg  pg_clip.c
cliplibs/clip-postscript/: Makefile.in  configure.in  psblock.prg  pscode.prg  psform.prg  pspage.prg  pspagesettings.prg  psprinter.prg  psstyle.prg  pstemplate.prg  psvariable.prg
cliplibs/clip-r2d2/: Makefile  Makefile.in  acc_log.prg  accpost.prg  addinfo.prg  an_rdf.prg  an_rdf2.prg  an_rdf3.prg  balance.prg  balance2.prg  bind2.prg  cgi_funcs.prg  classes_rdf.prg  classes_xml.prg  connect.prg  delobj.prg  getfile.prg  memo.prg  obj_arr.prg  obj_rass.prg  odfreport.prg  (+13 more)
config/: CleanLinks.sh  CreateMakefile_01.f  DistClean.sh  Makefile.in  checkmissing.sh  configure.in  configure_dir.sh  functions.f  init_Mkfile.sh  seq_no  viewlogfile.sh
hasher/: Makefile.in  configure.in
new-clip/: Makefile.in  configure.in  new-version.changelog  new.twt
prg/: Clean.sh  Install.sh  Make.sh  Makefile  Makefile.in  _cvs  all_trans  configure.in  mktgz  spec.in
(+6907 files in other folders)
