#!/bin/sh -u
#
#	Configure script for clip
#	<uri@itk.ru>
#
source ../configure.ini
beep_on
#OnScreen 2 "DIRS_TO_SCAN = >Makefile.01"
#echo "DIRS_TO_SCAN =" 												>Makefile.01
DIRS_TO_SCAN=""
#echo "CFLAGS = \$(C_FLAGS) -I." 																	>>Makefile.ini
#echo "CLIPFLAGS = -l -w -O -n -I . -I include -I ../include -I\$(Clip_I_Dir)" 	>>Makefile.ini
AllDir="bzip2 gzip com crypto fcgi gd gtk2 dbtcp codb mysql odbc oracle postgres
nanfor netto postscript r2d2 rtf xml"

# fw needs gtk2
#
export DIRS_TO_SCAN

function Get_Check ()
{
	local VarX=" "
	[ -f clip-$1.ok ] && VarX="Y"
	[ -f clip-$1.no ] && VarX="N"
	while [[ $VarX != [YyNn] ]] ; do
		OnScreen 2 "Do you want to install library clip-$1 : [y/n] :"
		read -n 1 VarX 		>&0
	done
	if [[ "$VarX" = [Yy] ]] ; then
#	echo "DIRS_TO_SCAN += clip-$1" 							>>Makefile.01
		touch clip-$1.ok
		echo "$1"
	else
		rm -f clip-$1.ok
		touch clip-$1.no
	fi
}
#echo $AllDir
for dName in $AllDir ; do
#	touch clip-$dName.ok
#	echo $dName
	VarX=""
	VarX=$(Get_Check $dName)
	if ! [[ -z $VarX ]] ; then
		DIRS_TO_SCAN="$DIRS_TO_SCAN clip-"$VarX
	fi
#	OnScreen 1 $DIRS_TO_SCAN
done

OnScreen 1 "clip-interbase only on i386"
if [[ $ARCH = "x86_64" ]] && [[ $C64 = "64" ]] ; then
	ARCH=x86_64
	C64=64
else
	ARCH=i586
	C64=""
	Get_Check "interbase"
fi
echo "DIRS_TO_SCAN = \$(sort $DIRS_TO_SCAN )" 							>./Makefile.01

OnScreen 1 "clip-fw depends on clip-gtk2"
if [[ -f clip-gtk2.ok ]] ; then
	Get_Check "fw"
fi
OnScreen 1 "clip-cti depends on clip-gtk2"
if [[ -f clip-gtk2.ok ]] ; then
	Get_Check "cti"
fi
OnScreen 1 "clip-glade2 depends on clip-gtk2"
if [[ -f clip-gtk2.ok ]] ; then
	Get_Check "glade2"
fi
OnScreen 1 "clip-ui depends on clip-xml"
if [[ -f clip-xml.ok ]] ; then
	Get_Check "ui"
fi
cat Makefile.ini Makefile.01 Makefile.in >Makefile
