#!/bin/sh -u
#
#	Configure script for clip
#	<uri@itk.ru>
#
#OnScreen 2 "DIRS_TO_SCAN = >Makefile.01"
#echo "DIRS_TO_SCAN =" 												>Makefile.01
DIRS_TO_SCAN=""
#echo "C_FLAGS = \$(C_FLAGS) -I." 																	>>Makefile.ini
#echo "CLIPFLAGS = -l -w -O -n -I . -I include -I ../include -I\$(Clip_I_Dir)" 	>>Makefile.ini
AllDir="bzip2 gzip com crypto fcgi gtk2 gtk dbtcp codb mysql odbc oracle postgres
nanfor netto r2d2 rtf xml"

# fw needs gtk2
#
export DIRS_TO_SCAN
OnScreen 2 "clip-interbase only on i386"
OnScreen 1 "clip-glade2 depends on clip-gtk2"
OnScreen 1 "clip-cti depends on clip-gtk2"
OnScreen 1 "clip-gtkextra depends on clip-gtk"
OnScreen 1 "clip-fw depends on clip-gtk & clip-cti"
OnScreen 1 "clip-postscript depends on clip-xml"
OnScreen 1 "clip-ui depends on clip-xml"

function Get_Check ()
{
	local VarX=" "
	[ -f clip-$1.ok ] && VarX="Y"
	[ -f clip-$1.no ] && VarX="N"
	while [[ $VarX != [YyNn] ]] ; do
		OnScreen 2 "Do you want to install library clip-$1 : [y/n] :"
		read -n 1 VarX 		>&0
	done
	if [[ "$VarX" = [Yy] ]] ; then
#	echo "DIRS_TO_SCAN += clip-$1" 							>>Makefile.01
		touch clip-$1.ok
		echo "$1"
	else
		rm -f clip-$1.ok
		touch clip-$1.no
	fi
}
#echo $AllDir
for dName in $AllDir ; do
	beep_on
#	touch clip-$dName.ok
#	echo $dName
	VarX=""
	VarX=$(Get_Check $dName)
	if ! [[ -z $VarX ]] ; then
		DIRS_TO_SCAN="$DIRS_TO_SCAN clip-"$VarX
	fi
#	OnScreen 1 $DIRS_TO_SCAN
done

if [[ $ARCH = "x86_64" ]] && [[ $C64 = "64" ]] ; then
	ARCH=x86_64
	C64=64
else
	ARCH=i586
	C64=""
	Get_Check "interbase"
fi

if [[ -f clip-gtk2.ok ]] ; then
	Get_Check "cti"
fi
if [[ -f clip-gtk.ok ]] ; then
	Get_Check "gtkextra"
fi
if [[ -f clip-gtk.ok ]] && [[ -f clip-cti.ok ]] ; then
	Get_Check "fw"
fi
if [[ -f clip-gtk2.ok ]] ; then
	Get_Check "glade2"
fi
if [[ -f clip-xml.ok ]] ; then
	Get_Check "ui"
fi
if [[ -f clip-xml.ok ]] ; then
	Get_Check "postscript"
fi
AllDir="$AllDir interbase cti fw gtkextra glade2 ui postscript"
DIRS_TO_SCAN=""
for dName in $AllDir ; do
	if [ -f clip-$dName.ok ] ; then
		DIRS_TO_SCAN="$DIRS_TO_SCAN clip-$dName"
	fi
done

echo "DIRS_TO_SCAN = $DIRS_TO_SCAN " 							>./Makefile.01

#echo "export PATH_LIB 			= 	\$(CLIPROOT)/lib/">>./Makefile.ini

touch configure.ok
