#!/bin/bash -ue
##
##															hasher dir
##
source $Clip_F_F
Config_Init
#
# 		variables re-defined here
#
echo "export V=$ClipVerbose" 							>>configure.ini
echo "export CFLAGS=\"$C_CLIP_FLAGS\"" 			>>configure.ini
echo "export CLIP_FLAGS=\"$CLIP_CLIP_FLAGS\"" 	>>configure.ini
#
echo "export V = $ClipVerbose" 					>>Makefile.ini
echo "export CFLAGS = $C_CLIP_FLAGS" 			>>Makefile.ini
echo "export CLIP_FLAGS = $CLIP_CLIP_FLAGS" 	>>Makefile.ini
#
# 			un-comment next line if re-defined variables
Config_Init_2
#
export ProgName=hasher-dir
export ADDLIBS=
cat ./Makefile.ini 	>./Makefile
cat ./Makefile.in 	>>./Makefile