#!/bin/sh -u

cp -f$V ../configure.ini ../Makefile.ini .

touch configure.ok
echo 'export C_LIBS="-L/home/angelo/compile/my_make.new/x86_64/clip64/lib64/ -lclip"' 					>>configure.ini
echo 'export CLIP_CP=/home/angelo/compile/my_make.new/x86_64/clip64/bin//clip_cp64.sh' 					>>configure.ini
echo 'export CLIP_MAKELIB=/home/angelo/compile/my_make.new/x86_64/clip64/bin//clip_makelib64.sh' 					>>configure.ini
echo 'export CLIP_MAKESLIB=/home/angelo/compile/my_make.new/x86_64/clip64/bin//clip_makeslib64.sh' 					>>configure.ini
echo 'export CLIP_MSGFMT=/home/angelo/compile/my_make.new/x86_64/clip64/bin//clip_msgfmt64.sh' 					>>configure.ini
echo 'export CLIP_MSGMERGE=/home/angelo/compile/my_make.new/x86_64/clip64/bin//clip_msgmerge64.sh' 					>>configure.ini
echo 'export CLIP=/home/angelo/compile/my_make.new/x86_64/clip64/bin//ci_clip64' 					>>configure.ini
echo 'export PO_BINS="po_extr64 po_subst64 po_compat64"' 					>>configure.ini
echo 'export TASK=libcliptask/libcliptask.a' 					>>configure.ini


echo "TARGET 				= 		lib\$(PROG) " 		>>Makefile.ini
echo "TARGET2				= 		lib\$(PROG2) " 		>>Makefile.ini
#echo "ATARGET 				= 		\$(TARGET)\$(DLLLIBSUFF) " 		>>Makefile.ini
#echo "ATARGET2				= 		\$(TARGET2)\$(DLLLIBSUFF) " 		>>Makefile.ini
#echo "RTARGET 				= 		\$(TARGET)\$(DLLREALSUFF) " 		>>Makefile.ini
#echo "RTARGET2				= 		\$(TARGET2)\$(DLLREALSUFF) " 		>>Makefile.ini
#echo "STARGET 				= 		\$(TARGET)\$(DLLSUFF) " 		>>Makefile.ini
#echo "STARGET2				= 		\$(TARGET2)\$(DLLSUFF) " 		>>Makefile.ini
echo "FULL_LIBCLIP 		= 		\$(Clip_L_Dir)/libclip.so " 		>>Makefile.ini
echo "L_CLIPLIB 			= 		-L\$(Clip_L_Dir) -lclip " 		>>Makefile.ini


echo "export C_LIBS=-L/home/angelo/compile/my_make.new/x86_64/clip64/lib64/ -lclip " 		>>Makefile.ini
echo "export CLIP_CP=/home/angelo/compile/my_make.new/x86_64/clip64/bin//clip_cp64.sh " 		>>Makefile.ini
echo "export CLIP_MAKELIB=/home/angelo/compile/my_make.new/x86_64/clip64/bin//clip_makelib64.sh " 		>>Makefile.ini
echo "export CLIP_MAKESLIB=/home/angelo/compile/my_make.new/x86_64/clip64/bin//clip_makeslib64.sh " 		>>Makefile.ini
echo "export CLIP_MSGFMT=/home/angelo/compile/my_make.new/x86_64/clip64/bin//clip_msgfmt64.sh " 		>>Makefile.ini
echo "export CLIP_MSGMERGE=/home/angelo/compile/my_make.new/x86_64/clip64/bin//clip_msgmerge64.sh " 		>>Makefile.ini
echo "export CLIP=/home/angelo/compile/my_make.new/x86_64/clip64/bin//clip64 " 		>>Makefile.ini
echo "export PO_BINS=po_extr64 po_subst64 po_compat64 " 		>>Makefile.ini
echo "export TASK=libcliptask/libcliptask.a " 		>>Makefile.ini

cp -f$V $Clip_I_Dir/ci_clipcfg.h $Clip_I_Dir/new_clipcfg.h || true