#!/bin/sh

DIRS_TO_SCAN=""
if [ -f ../cliplibs/clip-nanfor.o ] && [ -f ../cliplibs/clip-netto.o ] ; then
	DIRS_TO_SCAN="$DIRS_TO_SCAN bdbfs"
fi
if [ -f ../cliplibs/clip-codb.o ] ; then
	DIRS_TO_SCAN="$DIRS_TO_SCAN cobra_clnt"
fi
if [ -f ../cliplibs/clip-r2d2.o ] && [ -f ../cliplibs/clip-codb.o ] ; then
	DIRS_TO_SCAN="$DIRS_TO_SCAN cobra_serv"
fi
if [ -f ../cliplibs/clip-codb.o ] ; then
	DIRS_TO_SCAN="$DIRS_TO_SCAN codb"
fi
if [ -f ../cliplibs/clip-r2d2.o ] && [ -f ../cliplibs/clip-codb.o ] ; then
	DIRS_TO_SCAN="$DIRS_TO_SCAN kamache"
fi
if [ -f ../cliplibs/clip-codb.o ] ; then
	DIRS_TO_SCAN="$DIRS_TO_SCAN ocmng"
fi
if [ -f ../cliplibs/clip-gtk.o ] && [ -f ../cliplibs/clip-codb.o ] ; then
	DIRS_TO_SCAN="$DIRS_TO_SCAN udb"
fi
if [ -f ../cliplibs/clip-gtk.o ] && [ -f ../cliplibs/clip-codb.o ] ; then
	DIRS_TO_SCAN="$DIRS_TO_SCAN udbx"
fi
DIRS_TO_SCAN="$DIRS_TO_SCAN dbc debug doc_utils hiper pp utils "

echo "DIRS_TO_SCAN = $DIRS_TO_SCAN" >Makefile.01

cat Makefile.ini Makefile.01 Makefile.in >Makefile