#!/bin/sh
cp -f$V ../Makefile.ini ../configure.ini .
DIRS_TO_SCAN=""
if [ -f ../cliplibs/clip-nanfor.ok ] && [ -f ../cliplibs/clip-netto.ok ] ; then
	DIRS_TO_SCAN="$DIRS_TO_SCAN bdbfs"
fi
if [ -f ../cliplibs/clip-codb.ok ] ; then
	DIRS_TO_SCAN="$DIRS_TO_SCAN cobra_clnt"
fi
if [ -f ../cliplibs/clip-r2d2.ok ] && [ -f ../cliplibs/clip-codb.ok ] ; then
	DIRS_TO_SCAN="$DIRS_TO_SCAN cobra_serv"
fi
if [ -f ../cliplibs/clip-codb.ok ] ; then
	DIRS_TO_SCAN="$DIRS_TO_SCAN codb"
fi
if [ -f ../cliplibs/clip-r2d2.ok ] && [ -f ../cliplibs/clip-codb.ok ] ; then
	DIRS_TO_SCAN="$DIRS_TO_SCAN kamache"
fi
if [ -f ../cliplibs/clip-codb.ok ] ; then
	DIRS_TO_SCAN="$DIRS_TO_SCAN ocmng"
fi
if [ -f ../cliplibs/clip-gtk2.ok ] && [ -f ../cliplibs/clip-codb.ok ] ; then
	DIRS_TO_SCAN="$DIRS_TO_SCAN udb"
fi
if [ -f ../cliplibs/clip-gtk.ok ] && [ -f ../cliplibs/clip-codb.ok ] ; then
	DIRS_TO_SCAN="$DIRS_TO_SCAN udbx"
fi
DIRS_TO_SCAN="$DIRS_TO_SCAN dbc debug doc_utils hiper pp utils "

echo "DIRS_TO_SCAN = \$(sort $DIRS_TO_SCAN )" >Makefile.01

#cat Makefile.ini Makefile.01 Makefile.in >Makefile
#!/bin/sh

touch configure.ok
