#!/bin/sh

Check_Include 		protocol.h 				xyz 	clip-dbtcp 		Yes 	/opt/dbtcp 											"dbtcp.xx.tgz" \
																																				"can be downloaded at" \
																																				"http://packages.qa.debian.org/d/dbtcp.html"

DBTCP_PATH=$(Check_Library 		dbftp 				.a 	clip-dbtcp 		Yes 	/opt/dbtcp 								"dbtcp.xx.tgz" \
																																"can be downloaded at" \
																																"http://packages.qa.debian.org/d/dbtcp.html")

echo "DBTCP_PATH = $DBTCP_PATH" >>Makefile.ini
echo "DBTCP_PATH = $DBTCP_PATH" >>Makefile.ini
#!/bin/sh

touch configure.ok
