#!/bin/sh

uname=`uname -s`
uver=`uname -r`
hname=`hostname -f 2>/dev/null`

[ -z "$CLIPROOT" ] && CLIPROOT=$(cd ../../../; pwd)/cliproot

DLLSUFF='.so'
DLLREALSUFF='.so'

rm -f$V Makefile

cat ./Makefile.inc  																									>>Makefile.ini
echo "INCLUDEDIRS += -I$PWD -I$PWD/include -I$PWD/../clip-gtk/include -I$PWD/../clip-cti/include" 		>>Makefile.ini
ln -sf$V ./include ./fwin
echo ". done."
touch configure.ok