#!/bin/sh
Check_Library 		glade-2.0 			.so 	clip-glade2 	Yes 	/usr/lib$C64 							"libglade-devel-xx-$ARCH.(rpm/deb)"

LIBGLADE_VER=$(pkg-config --modversion libglade-2.0 2> /dev/null )

CFLAGS=$(pkg-config --cflags libglade-2.0)
LIBS=$(pkg-config --libs libglade-2.0)


echo "LIBS = $LIBS" >Makefile.01
echo "C_FLAGS += $CFLAGS $ADD_CFLAGS">>Makefile.01
echo "LIBGLADE_VER = $LIBGLADE_VER">>Makefile.01

cat Makefile.in >Makefile
#!/bin/sh

cat Makefile.ini Makefile.in >Makefile
