#!/bin/sh

Check_Library 		glade-2.0 			.so 	clip-glade2 	Yes 	/usr/lib$C64 							"libglade-devel-xx-$ARCH.(rpm/deb)"

LIBGLADE_VER=$(pkg-config --modversion libglade-2.0 2> /dev/null )

C_FLAGS=$(pkg-config --cflags libglade-2.0)
LIBS=$(pkg-config --libs libglade-2.0)
LIBS_temp="$LIBS"
LIBS=""
for aa in $LIBS_temp ; do
	if [[ "$aa" != "-pthread" ]] ; then
		LIBS="$LIBS $aa"
	fi
done
LIBS_temp="$C_FLAGS"
C_FLAGS=""
for aa in $LIBS_temp ; do
	if [[ "$aa" != "-pthread" ]] ; then
		C_FLAGS="$C_FLAGS $aa"
	fi
done

cat ./Makefile.inc 							>>Makefile.ini
echo "LIBS += $LIBS" 						>>Makefile.ini
echo "C_FLAGS += $C_FLAGS $ADD_CFLAGS"	>>Makefile.ini
echo "LIBGLADE_VER = $LIBGLADE_VER"		>>Makefile.ini
#!/bin/sh

touch configure.ok
